# java-digital-audio-workstation

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GAP_AUDIT_NOTES.md  Makefile  README.md  THIRD_PARTY_LICENSES  THIRD_PARTY_NOTICES.md  create-github-issues.sh  create-telemetry-issues.sh  create-ux-unplugged-issues.sh  generate-third-party-notices.sh  java26-setup.md  pom.xml
.github/agents/: java-25.agent.md  java-26.agent.md
.github/instructions/dawg-annotations-reflection/: SKILL.md
.github/instructions/java26-setup/: SKILL.md
.github/instructions/javafx-application-design/: SKILL.md
.github/instructions/research/: SKILL.md
.github/instructions/research-aes/: SKILL.md
.github/instructions/research-daw/: SKILL.md
.github/instructions/research-features/: SKILL.md
.github/instructions/research-immersive/: SKILL.md
.github/instructions/research-mastering/: SKILL.md
.github/instructions/research-tools/: SKILL.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  long-tests.yml  release.yml  windows-asioshim.yml
daw-acoustics/: NOTICE  pom.xml
daw-acoustics/src/main/java/: module-info.java
daw-app/: pom.xml
daw-app/src/main/java/: module-info.java
daw-app/src/main/resources/: zgc.conf
daw-app/src/main/resources/help/: arrangement.md  browser.md  index.md  mixer.md  onboarding.md  quick-help.md  topics.list  transport.md
daw-app/src/main/resources/themes/: dark-accessible.json  high-contrast.json  light-accessible.json
daw-app/src/test/long/resources/golden/: ddp-image.manifest.csv  (+1 more)
daw-app/src/test/resources/: junit-platform.properties
daw-core/: pom.xml
daw-core/native/asio/: CMakeLists.txt  README.md  asioshim.cpp  asioshim.h
daw-core/src/main/java/: module-info.java
daw-fx/: pom.xml
daw-fx/src/main/java/: module-info.java
daw-sdk/: pom.xml
daw-sdk/src/main/java/: module-info.java
docs/: ARCHITECTURE.md  acoustics-integration.md  java26-setup.md  native-build-setup.md  native-dependencies.md  project-migrations.md  ux-unplugged-behavior-issues.md
docs/design/: CONTROL_SYNCHRONIZATION_DESIGN_BOOK.md  PLUGIN_VIEW_DESIGN_BOOK.md  PROJECT_MANAGER_DESIGN_BOOK.md  SETTINGS_VIEW_DESIGN_BOOK.md  UI_DESIGN_BOOK.md
docs/enhancements/: 001-tarsodsp-integration.md  002-linear-phase-midside-eq.md  003-multiband-compressor.md  004-lookahead-limiter-truepeak.md  005-lufs-loudness-metering.md  006-multi-format-export.md  007-stereo-imaging-enhancements.md  008-3d-spatial-panner.md  009-binaural-renderer-hrtf.md  010-ambisonic-encoding-decoding.md  011-object-based-mixing.md  012-portaudio-jni-bindings.md  013-clap-lv2-plugin-hosting.md  014-dawproject-format-support.md  015-lock-free-audio-engine.md  016-ai-assisted-mixing-rlhf.md  017-semantic-auto-eq.md  018-room-acoustic-simulation.md  019-mastering-chain-presets-album-sequencing.md  020-fluidsynth-jni-midi-rendering.md  021-perceptual-audio-quality-metrics.md  022-physical-modeling-effects.md  README.md
docs/research/: README.md  aes-feature-enhancements.md  aes-pdf-catalog.md  aes-research-papers.md  audio-development-tools.md  immersive-audio-mixing.md  mastering-techniques.md  open-source-daw-tools.md
docs/screenshots/archive/: ARCHIVED_SCREENSHOTS.md
docs/scripts/: create-github-issues.sh
docs/user-stories/: 001-track-drag-and-drop-reordering.md  002-clip-splitting-and-trimming.md  003-automation-lanes.md  004-timeline-ruler-and-playhead.md  005-mixer-send-return-routing.md  006-audio-engine-real-time-playback.md  007-recording-workflow.md  008-audio-file-import.md  009-mixer-channel-eq-and-inserts.md  010-keyboard-shortcuts.md  011-multi-format-export.md  012-track-grouping-and-folders.md  013-midi-recording-and-editing.md  014-lufs-loudness-metering.md  015-mastering-chain-view.md  016-metronome.md  017-spatial-panner-ui.md  018-binaural-monitoring.md  019-project-save-load-autosave.md  020-dawproject-import-export.md  021-waveform-zoom-and-minimap.md  022-track-color-and-naming.md  023-spectrum-analyzer.md  024-undo-redo-history-panel.md  025-album-sequencing.md  026-adm-bwf-atmos-export.md  027-browser-sample-preview.md  028-goniometer-vectorscope.md  029-track-stem-export.md  030-plugin-parameter-ui.md  031-clip-crossfades.md  032-markers-and-locators.md  033-dark-theme-polish.md  034-clap-plugin-hosting.md  035-track-freeze.md  036-tempo-changes.md  037-cpu-performance-monitor.md  038-clip-clipboard-operations.md  039-folddown-monitoring.md  040-multi-take-comping.md  (+276 more)
docs/user-stories/future/: 147-midi-quantize-with-swing-and-groove.md  148-midi-humanization.md  149-midi-clip-looping.md  150-drum-grid-editor.md  152-external-midi-controller-mapping.md  182-ddp-image-export-for-cd.md  183-game-audio-export-wwise-fmod.md  184-musicxml-export-from-midi.md
icon-pack/: COLOR_GUIDE.md  README.md  preview.html
lib/: CMakeLists.txt  README.md
lib/RoomAcoustiCpp-1.0.1/RoomAcoustiCpp-1.0.1/RoomAcoustiCpp/include/Common/: Vec4.h
lib/compat/: rac_compat.h
lib/libmp3lame/: CMakeLists.txt  LICENSE  cmake_config.h.in
scripts/: create-aes-issues.sh  create-enhancement-issues.sh  create-toolbar-issues.sh
scripts/issues/: 01-graphic-equalizer-processor.md  02-oversampled-nonlinear-waveshaper.md  03-antiderivative-antialiasing.md  04-velvet-noise-reverb-processor.md  05-directional-fdn-reverb.md  06-perceptual-bass-extension.md  07-air-absorption-filter.md  08-non-ideal-opamp-distortion.md  09-chirp-peak-reduction.md  10-stn-decomposition.md  11-phase-alignment-polarity-detection.md  12-lossless-audio-integrity-checker.md  13-lossy-compression-artifact-detection.md  14-multitrack-mix-feature-analysis.md  15-fractional-octave-spectrum-smoothing.md  16-coherence-based-distortion-indicator.md  17-transient-detection-block-switching.md  18-binaural-externalization.md  19-stereo-to-binaural-conversion.md  20-2d-to-3d-ambience-upmixer.md  21-ambisonic-enhancement-tf-masking.md  22-spatial-rir-tail-resynthesis.md  23-panning-table-synthesis.md  24-stereo-to-mono-downmix-optimizer.md  25-audio-test-signal-generator.md  26-hearing-loss-simulation.md  27-bandwidth-extension.md
(+2165 files in other folders)
